--- a/src/studentmanage/manageCourseForm.form
+++ b/src/studentmanage/manageCourseForm.form
@@ -102,9 +102,9 @@
                               <EmptySpace min="-2" pref="210" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButtonCancel" min="-2" max="-2" attributes="0"/>
+                              <Component id="jButtonRemoveCourse" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jButtonEditStudent" min="-2" pref="144" max="-2" attributes="0"/>
+                              <Component id="jButtonEditCourse" min="-2" pref="144" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jButtonAddCourse" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -139,9 +139,9 @@
                               </Group>
                               <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="jButtonCancel" alignment="3" min="-2" pref="60" max="-2" attributes="0"/>
+                                  <Component id="jButtonRemoveCourse" alignment="3" min="-2" pref="60" max="-2" attributes="0"/>
                                   <Component id="jButtonAddCourse" alignment="3" min="-2" pref="60" max="-2" attributes="0"/>
-                                  <Component id="jButtonEditStudent" alignment="3" min="-2" pref="60" max="-2" attributes="0"/>
+                                  <Component id="jButtonEditCourse" alignment="3" min="-2" pref="60" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -204,7 +204,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAddCourseActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="jButtonCancel">
+            <Component class="javax.swing.JButton" name="jButtonRemoveCourse">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="1"/>
@@ -215,7 +215,7 @@
                 <Property name="text" type="java.lang.String" value="Supprimer"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCancelActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRemoveCourseActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField_CourseLabel">
@@ -280,11 +280,14 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField_CourseId">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField_CourseIdActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="jButtonEditStudent">
+            <Component class="javax.swing.JButton" name="jButtonEditCourse">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="1"/>
@@ -295,7 +298,7 @@
                 <Property name="text" type="java.lang.String" value="Modifier"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEditStudentActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonEditCourseActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
