--- a/src/studentmanage/MainForm.form
+++ b/src/studentmanage/MainForm.form
@@ -114,15 +114,15 @@
         <Menu class="javax.swing.JMenu" name="jMenu6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/studentmanage/images/schoola.png"/>
+              <Image iconType="3" name="/studentmanage/images/database.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Notes"/>
+            <Property name="text" type="java.lang.String" value="Partie_xml"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/personadd.png"/>
+                  <Image iconType="3" name="/studentmanage/images/import.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Importer"/>
               </Properties>
@@ -133,7 +133,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/48.png"/>
+                  <Image iconType="3" name="/studentmanage/images/export.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Exporter"/>
               </Properties>
