--- a/src/studentmanage/MainForm.form
+++ b/src/studentmanage/MainForm.form
@@ -39,26 +39,26 @@
         <Menu class="javax.swing.JMenu" name="jMenu4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/studentmanage/images/48.png"/>
+              <Image iconType="3" name="/studentmanage/images/books.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cours"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemAddCourse">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/personadd.png"/>
+                  <Image iconType="3" name="/studentmanage/images/adds.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Ajouter"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem3ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemAddCourseActionPerformed"/>
               </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/48.png"/>
+                  <Image iconType="3" name="/studentmanage/images/up.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Modifier"/>
               </Properties>
@@ -71,7 +71,7 @@
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/studentmanage/images/schoola.png"/>
+              <Image iconType="3" name="/studentmanage/images/score.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Notes"/>
           </Properties>
@@ -79,7 +79,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem5">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/personadd.png"/>
+                  <Image iconType="3" name="/studentmanage/images/adds.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Ajouter"/>
               </Properties>
@@ -90,7 +90,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/48.png"/>
+                  <Image iconType="3" name="/studentmanage/images/up.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Modifier/Suprimer"/>
               </Properties>
@@ -98,25 +98,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem7">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanage/images/48.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Voir Notes"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem7ActionPerformed"/>
-              </Events>
-            </MenuItem>
           </SubComponents>
         </Menu>
-        <Menu class="javax.swing.JMenu" name="jMenu6">
+        <Menu class="javax.swing.JMenu" name="jMenuImport">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/studentmanage/images/database.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Partie_xml"/>
+            <Property name="text" type="java.lang.String" value="Partie_Xml"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
@@ -130,7 +119,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem8ActionPerformed"/>
               </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuExport">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/studentmanage/images/export.png"/>
@@ -138,7 +127,7 @@
                 <Property name="text" type="java.lang.String" value="Exporter"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem9ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuExportActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
